Changes towards version 0.4:
- Improvements to the unix build system for cross-compilation - SvdB
- Do not define ssize_t for MinGW. - SvdB
- Fallback readdir_r() - SvdB
- Attempting to click the screen pops up an error message, from
  Nic, heavily modified (dodge on #533) -Michael
- Fixed potential crash with a truecolor oscilloscope image (thanks
  jdorje) and made it generally more flexible (bug #729) -Alex
- Added missing Tanaka battle portrait images (new artwork; oldcap) and
  minor fixes to other shofixti images (bug #183), from Nic
- Mycon captain portrait finally fixed (bug #183), from Nic
- Saving the game while on autopilot inside an interplanetary system
  will no longer reset the autopilot (bug #725) -Alex
- Main menu and Super Melee menu can now play music tracks; drop in
  'lbm/mainmenu.ogg' and 'melee/melemenu.ogg', respectively -Alex
- Can now switch mod->ogg in intro/outro player (thanks Nic), and
  mod<->ogg everywhere in general -Alex
- Fixed crash after T.Pet conversation upon reentering D.Crateris
  once Ur-Quan have been confused (bug #531) -Alex
- Fixed last subtitle flashing after fast-forwarding to the end,
  pressing F10 and selecting NO (bug #498) -Alex
- Fixed first contact with Arilou at homeworld; Talking Pet confusion
  (bug #638), from Paxtez
- Fixed warp-escape in Cyborg mode removed by previous game input
  patches (bug #563) -Alex
- Fixed spurious story-line changes (usually the manner of the encountered
  race) caused by loading a game from an Encounter screen (bug #519) -Alex
- Option change: --meleescale to --meleezoom (bug #694) -Alex
- The alpha icon is now default (for XP/2003); bug #474 -Alex
- Fixed incomplete memset()s in comm alien animation code (comm should
  be saner now), from jdorje
- Guard access to the Clock so that accessing it is a no-op when the game 
  isn't actually in progress (bug #678), from Nic
- Accept files with .uqm extension for packages (bug #558)
  Added regex fallback files. - SvdB